Add Twitch EventSub service scaffold with websocket+webhook support

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,10 @@ TWITCH_CLIENT_ID=replace_me
 TWITCH_CLIENT_SECRET=replace_me
 TWITCH_REDIRECT_URI=http://localhost:8080/oauth/callback
 TWITCH_DEFAULT_SCOPES=channel:bot chat:read chat:edit moderator:read:followers moderator:manage:chat_messages
+TWITCH_EVENTSUB_TRANSPORT=websocket
 TWITCH_EVENTSUB_WS_URL=wss://eventsub.wss.twitch.tv/ws
+TWITCH_EVENTSUB_WEBHOOK_CALLBACK_URL=https://your-public-domain.com/webhooks/twitch/eventsub
+TWITCH_EVENTSUB_WEBHOOK_SECRET=replace_me_32_plus_chars
 
 SERVICE_SIGNING_SECRET=replace_me_very_long_secret
 ADMIN_API_KEY=replace_me_admin_key
