--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DATABASE_URL=postgresql+asyncpg://twitch:twitch@localhost:5432/twitch_eventsub
 TWITCH_CLIENT_ID=replace_me
 TWITCH_CLIENT_SECRET=replace_me
 TWITCH_REDIRECT_URI=http://localhost:8080/oauth/callback
-TWITCH_DEFAULT_SCOPES=channel:bot user:read:chat chat:read chat:edit moderator:read:followers moderator:manage:chat_messages
+TWITCH_DEFAULT_SCOPES=channel:bot user:bot user:read:chat user:write:chat chat:read chat:edit moderator:read:followers moderator:manage:chat_messages
 TWITCH_EVENTSUB_WS_URL=wss://eventsub.wss.twitch.tv/ws
 TWITCH_EVENTSUB_WEBHOOK_CALLBACK_URL=https://your-public-domain.com/webhooks/twitch/eventsub
 TWITCH_EVENTSUB_WEBHOOK_SECRET=replace_me_32_plus_chars
