--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
         condition: service_healthy
     env_file:
       - .env
+    environment:
+      DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-twitch}:${POSTGRES_PASSWORD:-twitch}@db:5432/${POSTGRES_DB:-twitch_eventsub}
     ports:
       - "${APP_PORT:-8080}:8080"
 
