Convert test-app into frontend UI with service API proxy

--- a/test-app/.env.example
+++ b/test-app/.env.example
@@ -1,32 +1,10 @@
 SERVICE_BASE_URL=http://localhost:8080
-ADMIN_API_KEY=replace_me_admin_key
+TEST_APP_PORT=9090
 
-# If provided, these are used directly for service-auth endpoints and websocket.
-# If missing, the app creates/recovers a service account through admin endpoints.
+# Required service credentials.
 SERVICE_CLIENT_ID=
 SERVICE_CLIENT_SECRET=
-SERVICE_ACCOUNT_NAME=test-app
 
-# Bot selection (one required for full scenario)
-TEST_BOT_ID=
-TEST_BOT_NAME=
-
-# Comma-separated Twitch broadcaster user IDs (required)
-TEST_BROADCASTER_IDS=
-
-# Chat send behavior
-TEST_CHAT_MESSAGE=[test-app] hello from service integration test
-TEST_CHAT_AUTH_MODE=auto
-
-# Listener behavior
-LISTEN_SECONDS=60
-HEARTBEAT_INTERVAL_SECONDS=20
-BROADCASTER_AUTH_WAIT_SECONDS=180
-KEEP_INTERESTS=false
-
-# Optional webhook receive test
-# Set this to a public callback URL (for example ngrok) that points to this app:
-# http(s)://<public-host>/service-webhook
+# Optional prefill webhook callback URL for interests using webhook transport.
+# Example: https://<ngrok-domain>/service-webhook
 TEST_WEBHOOK_PUBLIC_URL=
-TEST_WEBHOOK_LISTEN_PORT=9090
-
