Fix EventSub delivery reliability and log full test-app events

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ TWITCH_DEFAULT_SCOPES=channel:bot user:bot user:read:chat user:write:chat chat:r
 TWITCH_EVENTSUB_WS_URL=wss://eventsub.wss.twitch.tv/ws
 TWITCH_EVENTSUB_WEBHOOK_CALLBACK_URL=https://your-public-domain.com/webhooks/twitch/eventsub
 TWITCH_EVENTSUB_WEBHOOK_SECRET=replace_me_32_plus_chars
-TWITCH_EVENTSUB_WEBHOOK_EVENT_TYPES=channel.online,channel.offline
+TWITCH_EVENTSUB_WEBHOOK_EVENT_TYPES=stream.online,stream.offline
 
 SERVICE_SIGNING_SECRET=replace_me_very_long_secret
 ADMIN_API_KEY=replace_me_admin_key
