--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-twitch}:${POSTGRES_PASSWORD:-twitch}@db:5432/${POSTGRES_DB:-twitch_eventsub}
     ports:
-      - "${APP_PORT:-8080}:8080"
+      - "${APP_PORT:-8080}:${APP_PORT:-8080}"
 
 volumes:
   postgres_data:
