--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,11 @@ APP_ENV=dev
 APP_HOST=0.0.0.0
 APP_PORT=8080
 APP_LOG_LEVEL=info
+APP_EVENTSUB_LOG_PATH=./logs/eventsub.log
 APP_ALLOWED_IPS=
 APP_TRUST_X_FORWARDED_FOR=false
+LOKI_HOST=
+LOKI_PORT=
 
 POSTGRES_DB=twitch_eventsub
 POSTGRES_USER=twitch
