--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,6 +32,7 @@ services:
       # Improves file change pickup in mounted Windows volumes.
       WATCHFILES_FORCE_POLLING: "true"
       PYTHONPATH: /workspace
+      APP_EVENTSUB_LOG_PATH: /workspace/logs/eventsub.log
     volumes:
       - ./:/workspace
     ports:
@@ -61,6 +62,23 @@ services:
       - --log=stdout
     ports:
       - "4040:4040"
+
+  alloy:
+    image: grafana/alloy:latest
+    container_name: twitch_eventsub_alloy_dev
+    restart: unless-stopped
+    env_file:
+      - .env
+    depends_on:
+      - app
+    command:
+      - run
+      - /etc/alloy/config.alloy
+    volumes:
+      - ./observability/alloy/config.alloy:/etc/alloy/config.alloy:ro
+      - ./logs:/var/log/twitch-service
+    ports:
+      - "12345:12345"
 
 volumes:
   postgres_data_dev:
