--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,27 @@ services:
       - .env
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-twitch}:${POSTGRES_PASSWORD:-twitch}@db:5432/${POSTGRES_DB:-twitch_eventsub}
+      APP_EVENTSUB_LOG_PATH: /var/log/twitch-service/eventsub.log
+    volumes:
+      - ./logs:/var/log/twitch-service
     ports:
       - "${APP_PORT:-8080}:${APP_PORT:-8080}"
+
+  alloy:
+    image: grafana/alloy:latest
+    restart: unless-stopped
+    env_file:
+      - .env
+    depends_on:
+      - app
+    command:
+      - run
+      - /etc/alloy/config.alloy
+    volumes:
+      - ./observability/alloy/config.alloy:/etc/alloy/config.alloy:ro
+      - ./logs:/var/log/twitch-service
+    ports:
+      - "12345:12345"
 
 volumes:
   postgres_data:
