Harden webhook targets and require WS token auth

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_LOG_LEVEL=info
 APP_EVENTSUB_LOG_PATH=./logs/eventsub.log
 APP_ALLOWED_IPS=
 APP_TRUST_X_FORWARDED_FOR=false
+APP_WEBHOOK_TARGET_ALLOWLIST=
+APP_BLOCK_PRIVATE_WEBHOOK_TARGETS=true
 LOKI_HOST=
 LOKI_PORT=
 
