--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ twitch-eventsub-cli = "app.cli:main"
 [build-system]
 requires = ["setuptools>=69.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["app*"]
