--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
   app:
     build: .
     restart: unless-stopped
+    labels:
+      observability_loki: "true"
+      observability_loki_group: "app"
     depends_on:
       db:
         condition: service_healthy
@@ -45,6 +48,7 @@ services:
     volumes:
       - ./observability/alloy/config.alloy:/etc/alloy/config.alloy:ro
       - ./logs:/var/log/twitch-service
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - "12345:12345"
 
