Fix Alloy config syntax and make Alloy port configurable

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ APP_WEBHOOK_TARGET_ALLOWLIST=
 APP_BLOCK_PRIVATE_WEBHOOK_TARGETS=true
 LOKI_HOST=
 LOKI_PORT=
+ALLOY_PORT=12345
 
 POSTGRES_DB=twitch_eventsub
 POSTGRES_USER=twitch
