--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,15 +41,11 @@ services:
     ports:
       - "${APP_PORT:-8080}:8080"
     command:
-      - uvicorn
-      - app.main:app
-      - --host
-      - 0.0.0.0
-      - --port
-      - "8080"
-      - --reload
-      - --reload-dir
-      - /workspace/app
+      - sh
+      - -c
+      - >-
+        python -m alembic upgrade head &&
+        uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload --reload-dir /workspace/app
 
   ngrok:
     image: ngrok/ngrok:latest
