--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Minimal Twitch EventSub bridge service"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+  "alembic>=1.16.0",
   "asyncpg>=0.30.0",
   "fastapi>=0.116.0",
   "httpx>=0.28.0",
